welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value vrai
		if (nums(x)+5==nums(x+1) && nums(x)-1==nums(x+2)) {return vrai}
                                                                          ^